<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">YboxClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="iknow">知道了</string>
    <string name="shutdown_reminder">按确定YBOX将关机</string>
    <string name="request_fail">请求失败</string>
    <string name="request_fail_net">网络原因，请求失败</string>
    <string name="set_fail">设置修改失败</string>
    <string name="unknow">未知</string>
    <string name="exit">退出</string>
    <string name="create">创建</string>

    <!-- Tab提示 -->
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_publish">提交</string>
    <string name="action_login">登录</string>
    <string name="action_logout">登出</string>
    <string name="action_cancel">取消</string>
    <string name="action_accept">确认</string>
    <string name="action_new">新建</string>
    <string name="action_refresh">刷新</string>
    <string name="action_upload">上传</string>
    <string name="action_download">下载</string>

    <!-- 主页面 -->
    <string name="tab_setting">设置</string>
    <string name="tab_status">状态</string>
    <string name="tab_shutdown">关机</string>
    <string name="tab_mobile_data">数据</string>
    <string name="tab_admin">注册/登录</string>
    <string name="tab_recommend">APP推荐</string>
    <string name="tab_cloud">公众云</string>
    <string name="tab_storage">我的存储</string>
    <string name="warn_battery_low">终端电量低！</string>
    <string name="data_open_fail">打开数据流量失败</string>
    <string name="storage_info" formatted="false">剩余%s/%s</string>

    <!-- 重启热点提示 -->
    <string name="valid_after_wifi_restart">重启WiFi后配置生效，重启大概5s完成</string>
    <string name="wifi_restart_now">立即重启</string>
    <string name="wifi_restart_later">稍后重启</string>

    <!-- 终端状态相关 -->
    <string name="status_title">终端状态</string>
    <string name="status_traffic_remain">流量剩余</string>
    <string name="status_battery_remain">电池剩余</string>
    <string name="status_battery_time">预计可用</string>
    <string name="status_signal_strength">3G信号</string>
    <string name="status_traffic_month" formatted="false">本月流量：%s / %s</string>

    <!-- 流量统计相关<xliff:g>%s</xliff:g> -->
    <string name="traffic_title">流量统计</string>
    <string name="traffic_today_used">今日已用：%s</string>
    <string name="traffic_month_used">本月已用：%s</string>
    <string name="traffic_month_remain">本月剩余：%s</string>
    <string name="traffic_limit">本月流量限制：%s</string>
    <string name="traffic_warnint">本月流量警告：%s</string>

    <!-- 设置相关 -->
    <string name="setting_title">设置</string>
    <string name="setting_wlan">网络配置</string>
    <string name="setting_devices">用户列表</string>
    <string name="setting_telnet">远程控制</string>
    <string name="setting_tvmode">电视制式</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_freq_search">搜台设置</string>
    <string name="setting_auto_sleep">自动休眠</string>
    <string name="setting_wifi">无线参数</string>
    <string name="setting_distance">远程控制</string>
    <string name="setting_update_ybox">固件升级</string>
    <string name="setting_update_app">APP升级</string>
    <string name="setting_aboutus">关于我们</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_devices_num">%d个人连接</string>

    <!-- WLAN配置相关 -->
    <string name="conn_type_ethernet">以太网</string>
    <string name="conn_type_3g">3G</string>
    <string name="ethernet_not_conn_reminder">当前网络信息不可读</string>
    <string name="wlan_title">端口配置</string>
    <string name="ipaddress">IP地址</string>
    <string name="mask">子网掩码</string>
    <string name="gateway">网关</string>
    <string name="dns1">DNS主用</string>
    <string name="dns2">DNS备用</string>
    <string name="ip_dhcp">DHCP</string>
    <string name="ip_static">静态IP</string>

    <!-- WLAN配置 -->
    <string name="address_invalid">IP地址不合法</string>
    <string name="gateway_invalid">网关地址不合法</string>
    <string name="mask_invalid">子网掩码不合法</string>
    <string name="dns_invalid">DNS地址不合法</string>
    <string name="dns_empty_all">DNS地址不能都为空</string>

    <!-- 无线设置 -->
    <string name="wifiset_base">基础设置</string>
    <string name="ssid_name">网络SSID</string>
    <string name="wifi_channel">信道</string>
    <string name="security">安全性</string>
    <string name="pass_name">密码</string>
    <string name="show_pass">显示密码</string>
    <string name="max_client_num">最大支持连接数</string>
    <string name="wifi_auto_disable">保持WiFi开启</string>
    <string name="ssid_empty">SSID不能为空</string>
    <string name="pass_hint">密码至少包含 8 个字符"</string>
    <string name="pass_too_short">密码至少包含 8 个字符"</string>
    
    <string name="wifi_prefix">YBOX-</string>

    <string-array name="wifi_security_types">
        <item>无</item>
        <item>WPA PSK</item>
        <item>WPA2 PSK</item>
    </string-array>
    <string-array name="max_users_selector">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="auto_disable_types">
        <item>始终</item>
        <item>空闲5分钟后关闭</item>
        <item>空闲10分钟后关闭</item>
    </string-array>
    <string-array name="auto_sleep_types">
        <item>始终</item>
        <item>空闲10分钟后休眠</item>
        <item>空闲30分钟后休眠</item>
    </string-array>
    <string-array name="channel_values">
        <item>自动</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <!-- 连接设备控制 -->
    <string name="devices_title">设备管理</string>
    <string name="device_add_blacklist">拒绝连接</string>
    <string name="device_clear_blacklist">取消拒绝</string>
    <string name="device_mac_title">MAC</string>
    <string name="device_deal_reminder">正在处理中&#8230;</string>

    <!-- 用户注册 -->
    <string name="register_title">用户注册</string>
    <string name="register_phone">手机号码：</string>
    <string name="register_verify">验证码：</string>
    <string name="request_params_wrong">请求参数格式错误</string>
    <string name="next_step">下一步</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="phone_token_hint">请输入验证码</string>
    <string name="phone_token_capture">获取手机验证码</string>
    <string name="phone_token_capture_later">%d s后再次获取验证码</string>
    <string name="phone_empty">请先输入手机号码</string>
    <string name="phone_wrong_format">手机号码格式错误</string>
    <string name="phone_length_wrong">手机号码长度必须是11位</string>
    <string name="verify_empty">请先输入验证码</string>
    <string name="verify_length_wrong">验证码长度不正确</string>
    <string name="verify_phone_invalid">你填写的手机号码不正确</string>
    <string name="verify_request_success">验证码请求&lt;font color=&quot;#64db4f&quot;>成功&lt;/font>，验证码10分钟后过期</string>
    <string name="verify_phone_fail">向该手机号码发送验证码失败</string>
    <string name="verify_request_fail">请求验证码失败</string>
    <string name="login_verify_invalid">验证码错误</string>
    <string name="login_verify_timeout">验证码过期</string>
    <string name="login_request_fail">登录失败</string>
    <string name="login_request_success">登录成功</string>
    <string name="register_lisence">我已阅读免责声明并同意</string>
    <string name="register_lisence_title">免责声明：</string>
    <string name="register_lisence_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;尊敬的用户：您在使用视网魔免费提供的免费无线上网服务时，请保护好您的个人信息与资料，以免被他人非法获得或使用；请遵守国家相关法律法规规定，不访问非法、不良网站及发表、传输任何违法信息。您在网络上泄露个人信息资料，或者访问非法、不良网站及发表、传输任何违法信息而导致的相关损失俞责任，均由您自行承担，视网魔对此不承担任何责任。</string>
    <string name="register_pass_empty">密码不能为空</string>

    <!-- 用户登录 -->
    <string name="login_title">账号登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_account">账号：</string>
    <string name="login_pass">密码：</string>
    <string name="pass_remember">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_pass_wrong">密码错误</string>
    <string name="login_not_registered">该手机号码还未注册</string>

    <!-- 设备绑定 -->
    <string name="device_bind_title">设备绑定</string>
    <string name="unlogin">未登录</string>
    <string name="device_bind_reminder">完成绑定开启远程控制</string>
    <string name="bind_device">绑定设备</string>
    <string name="device_info_get_fail">获取设备信息失败</string>
    <string name="device_binding">正在绑定中&#8230;</string>
    <string name="device_unbinding">正在解绑中&#8230;</string>
    <string name="device_bind_success">绑定成功！</string>
    <string name="device_unbind_success">解绑成功！</string>
    <string name="device_bind_fail">绑定失败！</string>
    <string name="device_unbind_fail">解绑失败！</string>

    <!-- 直播界面 -->
    <string name="live_program_title">直播</string>
    <string name="guide_now_title">正在播放：</string>
    <string name="guide_next_title">即将播放：</string>
    <string name="guides_empty">暂无节目预告</string>
    <string name="program_not_availabe">遥控器被抢了！</string>
    <string name="reach_limit">目前已达到观看极限！</string>
    <string name="status_unknow">直播模块挂了</string>
    <string name="program_load_fail">加载直播列表失败</string>
    <string name="request_video_url_fail">请求播放失败</string>

    <!-- 下拉刷新菜单 -->
    <string name="program_pullrefresh_pull">下拉刷新节目单…</string>
    <string name="program_pullrefresh_loading">正在刷新节目单…</string>

    <!-- 电视制式 -->
    <string name="tvmodes_title">电视制式</string>
    <string name="tvmodes_empty">当前无支持的电视制式</string>

    <!-- 更新 -->
    <string name="update">更新</string>
    <string name="no_need_update">当前已是最新版本</string>
    <string name="update_title">检测到新版本</string>
    <string name="update_title_hard">强制升级</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后更新</string>
    <string name="checking_update">正在检查更新…</string>
    <string name="update_no_need">已是最新版!</string>
    <string name="update_download_title">正在下载</string>
    <string name="sdcard_fail">没有找到存储卡!</string>
    <string name="invalid_download_path">下载链接地址为空或不存在！</string>
    <string name="file_error">文件异常！</string>
    <string name="download_fail">下载异常，请重试！</string>
    <string name="file_download_fail">文件下载失败</string>
    <string name="update_info_get_fail">获取更新信息失败，请检查网络连接</string>
    <string name="update_invalid_version">当前版本不存在</string>

    <!-- 搜索无线 -->
    <string name="wifi_search_text1">正在搜索无线.</string>
    <string name="wifi_search_text2">正在搜索无线..</string>
    <string name="wifi_search_text3">正在搜索无线...</string>
    <string name="wifi_search_text4">正在搜索无线....</string>
    <string name="wifi_choose_title">请选择要连接的无线</string>

    <!-- 自动搜台 -->
    <string name="auto_search_choose_title">选择搜台类型</string>

    <string-array name="auto_search_types">
        <item>自动</item>
        <item>手动</item>
    </string-array>

    <!-- 文件管理 -->
    <string name="sdcard_unavailable">终端SD卡不可用</string>
    <string name="file_not_exist">该文件不存在</string>
    <string name="file_not_directory">该文件不是目录类型</string>
    <string name="file_delete_reminder">确定要删除以下文件？</string>

    <!-- 公众云 -->
    <string name="cloud_title">公众云</string>

    <!-- 上传文件位置选择 -->
    <string name="uplpad_path_title">选择上传位置</string>
    <string name="new_folder_title">新建文件夹</string>
    <string name="new_folder_name_hint">新建文件夹</string>
    <string name="folder_newing">正在创建文件夹&#8230;</string>

    <!-- 选择上传文件 -->
    <string name="upload_choose_title">选择文件</string>
    <string name="upload_base_path">手机</string>
    <string name="upload">上传</string>

    <!-- 传输列表 -->
    <string name="transfer_title">传输列表</string>
    <string name="upload_list_tab">上传列表</string>
    <string name="download_list_tab">下载列表</string>

</resources>