<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/login_layout"
        android:layout_marginBottom="15dip"
        android:background="@color/login_top_bcg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_top"
        android:layout_marginTop="-15dip"
        android:background="@color/login_bottom_bcg" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/bcg_round_corner_item"
        android:padding="5dip" >

        <TextView
            android:id="@+id/login_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:padding="12dip"
            android:text="@string/login_account"
            android:textColor="@color/login_text_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/login_account_text"
            android:layout_marginLeft="-12dip"
            android:layout_toRightOf="@id/login_account_text"
            android:background="@null"
            android:inputType="text"
            android:padding="12dip"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/login_account_text"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/login_text_divider" />

        <TextView
            android:id="@+id/login_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_account_text"
            android:layout_marginTop="5dip"
            android:padding="12dip"
            android:text="@string/login_pass"
            android:textColor="@color/login_text_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/login_pass_text"
            android:layout_marginLeft="-12dip"
            android:layout_toRightOf="@id/login_pass_text"
            android:background="@null"
            android:inputType="textPassword"
            android:padding="12dip"
            android:singleLine="true" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/pass_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login_layout"
        android:layout_marginLeft="40dip"
        android:button="@drawable/login_checkbox"
        android:text="@string/pass_remember"
        android:textColor="@color/login_text_title"
        android:textSize="13sp" />

    <CheckBox
        android:id="@+id/login_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pass_remember"
        android:layout_alignParentRight="true"
        android:layout_marginRight="48dip"
        android:button="@drawable/login_checkbox"
        android:text="@string/login_auto"
        android:textColor="@color/login_text_title"
        android:textSize="13sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_remember"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:background="@drawable/login"
        android:minWidth="250dip"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:background="@drawable/register"
        android:minWidth="250dip"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</RelativeLayout>