<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/register_layout"
        android:layout_marginBottom="15dip"
        android:background="@color/login_top_bcg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_top"
        android:layout_marginTop="-15dip"
        android:background="@color/login_bottom_bcg" />

    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/bcg_round_corner_item"
        android:padding="5dip" >

        <TextView
            android:id="@+id/phone_num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:padding="12dip"
            android:text="@string/register_phone"
            android:textColor="@color/login_text_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone_num_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/phone_num_text"
            android:layout_marginLeft="-12dip"
            android:layout_toRightOf="@id/phone_num_text"
            android:background="@null"
            android:inputType="phone"
            android:padding="12dip"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/phone_num_text"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/login_text_divider" />

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/phone_num_text"
            android:layout_alignRight="@id/phone_num_text"
            android:layout_below="@id/phone_num_text"
            android:layout_marginTop="5dip"
            android:padding="12dip"
            android:text="@string/register_verify"
            android:textColor="@color/login_text_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/verify_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/verify_text"
            android:layout_marginLeft="-12dip"
            android:layout_toRightOf="@id/verify_text"
            android:background="@null"
            android:inputType="number"
            android:padding="12dip"
            android:singleLine="true" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/verify_text"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/login_text_divider" />

        <TextView
            android:id="@+id/pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/phone_num_text"
            android:layout_alignRight="@id/phone_num_text"
            android:layout_below="@id/verify_text"
            android:layout_marginTop="5dip"
            android:padding="12dip"
            android:text="@string/login_pass"
            android:textColor="@color/login_text_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/pass_text"
            android:layout_marginLeft="-12dip"
            android:layout_toRightOf="@id/pass_text"
            android:background="@null"
            android:inputType="textPassword"
            android:padding="12dip"
            android:singleLine="true" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/register_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/register_layout"
        android:layout_marginLeft="40dip"
        android:button="@drawable/login_checkbox"
        android:textColor="@color/login_text_title"
        android:textSize="13sp" />

    <Button
        android:id="@+id/register_lisence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/register_checkbox"
        android:layout_toRightOf="@id/register_checkbox"
        android:background="@drawable/transparent"
        android:paddingLeft="5dip"
        android:text="@string/register_lisence"
        android:textColor="#2C8EEA"
        android:textSize="14sp" />

    <Button
        android:id="@+id/phone_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:background="@drawable/register"
        android:minWidth="250dip"
        android:text="@string/phone_token_capture"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:background="@drawable/login"
        android:minWidth="250dip"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</RelativeLayout>